# foobartory

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
foobartory/: __main__.py  config.py  conftest.py  constants.py  decorators.py  factory.py  main.py  models.py
foobartory/tests/: test_foobartory.py  test_main.py  test_models.py
