[metadata]
name = foobartory
version = 1.0.0
author = Mathis DUPUY
description = A foobartory in expansion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Akiat/foobartory
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = True
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
include =
    foobartory
    foobartory.tests

[options.entry_points]
console_scripts =
    foobartory = foobartory.main:start

[tool:pytest]
addopts =
    --asyncio-mode=auto
    --cov
testpaths =
    foobartory/tests
